<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Page2Fragment">

    <TextView
        android:id="@+id/page2h"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/page2H"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:contentDescription="@string/previous"
        android:visibility="visible"
        android:background="@drawable/arrow_background"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewPager"
        app:layout_constraintBottom_toBottomOf="@id/viewPager" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/page2h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sliderLabel" />


    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        android:contentDescription="@string/next"
        android:visibility="visible"
        android:background="@drawable/arrow_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewPager"
        app:layout_constraintBottom_toBottomOf="@id/viewPager" />


    <TextView
        android:id="@+id/sliderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
