<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Page5Fragment">
    <TextView
        android:id="@+id/page5h"
        android:layout_width="match_parent"
        android:paddingStart="24sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/page5H"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/albums"
        android:layout_width="match_parent"
        android:paddingTop="0sp"
        android:paddingBottom="0sp"
        android:paddingLeft="24sp"
        android:paddingRight="24sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:text="@string/albums"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page5h" />


    <TextView
        android:id="@+id/page5p"
        android:layout_width="match_parent"
        android:paddingTop="0sp"
        android:paddingBottom="0sp"
        android:paddingLeft="24sp"
        android:paddingRight="24sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/page5p"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albums" />


    <ImageView
        android:id="@+id/page5img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/page5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page5p" />




</androidx.constraintlayout.widget.ConstraintLayout>