<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:paddingTop="100dp"
    tools:context=".Page1Fragment">

    <TextView
        android:id="@+id/myname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_group"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/myname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/page1img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:rotation="37"
        android:rotationX="25"
        android:rotationY="25"
        android:src="@drawable/page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group"
        android:contentDescription="@string/desc" />

    <ImageView
        android:id="@+id/page1img2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="189dp"
        android:contentDescription="@string/desc"
        android:rotation="-46"
        android:rotationX="-41"
        android:rotationY="-12"
        android:src="@drawable/hi_gif1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myname" />

    <ImageView
        android:id="@+id/page1img3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/desc"
        android:rotationX="-12"
        android:rotationY="37"
        android:src="@drawable/hi_gif2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myname" />

</androidx.constraintlayout.widget.ConstraintLayout>
